import groovy.json.JsonOutput
import groovy.json.JsonSlurper

plugins {
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.1.37'
    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.6'
    id 'eclipse'
}

configurations.configureEach {
    resolutionStrategy {
        force 'com.google.guava:guava:32.1.3-jre'
    }
}

def versionProps = new Properties()
file('version.properties').withInputStream { versionProps.load(it) }

def gradleProps = new Properties()
file('gradle.properties').withInputStream { gradleProps.load(it) }

version = versionProps.getProperty('version')
ext.version_buildnumber = versionProps.getProperty('build_number')?.toInteger() ?: 0
ext.stage = versionProps.getProperty('stage') ?: ''

println "-> build.gradle applying version: $version (build ${version_buildnumber}) ${stage}"

group = 'mctmods.blastplaster'

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Jar).configureEach {
    zip64 true
}

ext {
    mod_id = gradleProps['mod_id']
    version_minecraft = versionProps['version_mc']
    version_neoforge = versionProps['version_neoforge']
    version_neoforge_min = versionProps['version_neoforge_min']
    version_dynamictrees_curse = versionProps['version_dynamictrees_curse']
    version_dynamictrees_min = versionProps['version_dynamictrees_min']
    mod_license = gradleProps['mod_license']
    mod_name = gradleProps['mod_name']
    mod_authors = gradleProps['mod_authors']
    mod_description = gradleProps['mod_description']
}

def version_replaces = {
    [
            'version'        : project.version,
            'build_number'   : project.ext.get('version_buildnumber') ?: version_buildnumber,
            'version_mc'     : version_minecraft,
            'version_neoforge' : version_neoforge,
            'version_neoforge_min' : version_neoforge_min,
            'version_dynamictrees_min' : version_dynamictrees_min,
            'mod_license'    : mod_license,
            'mod_name'       : mod_name,
            'mod_authors'    : mod_authors,
            'mod_description': mod_description,
            'stage'          : project.ext.get('stage') ?: stage,
    ] as Map<String, Object>
}

def jsonPatterns = ["**/*.json", "**/*.mcmeta"]

processResources {
    duplicatesStrategy = DuplicatesStrategy.FAIL
    inputs.properties(version_replaces())
    filesMatching("META-INF/neoforge.mods.toml") {
        expand version_replaces()
    }
    exclude ".cache"
    doLast {
        fileTree(dir: outputs.files.asPath, includes: jsonPatterns).each { File file ->
            file.text = JsonOutput.toJson(new JsonSlurper().parse(file, 'UTF-8'))
        }
    }
}

tasks.register('copyModsTomlForIntelliJ', Copy) {
    from processResources.destinationDir
    into "$projectDir/out/production/resources"
    include "META-INF/neoforge.mods.toml"
    dependsOn processResources
}

runs {
    configureEach { run ->
        run.workingDirectory = project.file("run/${run.name}")

        systemProperty 'forge.logging.markers', ''
        systemProperty 'forge.logging.console.level', 'debug'
        modSource project.sourceSets.main
    }

    client {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id as String
        arguments = ['--username', 'tgstyle', '--width', '1920', '--height', '1080']
    }

    server {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id as String
        argument '--nogui'
    }
}

repositories {
    maven {
        url = 'https://www.cursemaven.com'
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
    implementation "net.neoforged:neoforge:${version_neoforge}"
    implementation "curse.maven:${version_dynamictrees_curse}"
}

def customGradle = rootProject.file('custom.gradle')
if (customGradle.exists()) {
    apply from: customGradle
}

tasks.register('bumpVersion') {
    outputs.upToDateWhen { false }
    doLast {
        def props = new Properties()
        file('version.properties').withInputStream { props.load(it) }
        def currentBuild = props['build_number'].toInteger()
        def nextBuild = currentBuild + 1
        props['build_number'] = nextBuild.toString()
        file('version.properties').withOutputStream { props.store(it, null) }

        ext.version_buildnumber = nextBuild
        def stage = props['stage'] ?: ''
        def stagePart = stage ? "-${stage}" : ""
        def newVersion = "${props['version']}-b${nextBuild}${stagePart}"

        project.version = newVersion

        tasks.withType(Jar).configureEach {
            it.archiveVersion.set(newVersion)

            def base = it.archiveBaseName.get()
            def ver = it.archiveVersion.get()
            def cls = it.archiveClassifier.getOrNull()
            def extn = it.archiveExtension.get()
            def forcedFileName = "${base}${ver ? '-' + ver : ''}${cls ? '-' + cls : ''}.${extn}"
            it.archiveFileName.set(forcedFileName)
        }
    }
}

build.dependsOn bumpVersion

tasks.register('sourcesJar', Jar) {
    dependsOn classes
    archiveBaseName.set("MCT-Blast-Plaster-${version_minecraft}")
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives sourcesJar
}

void minimizePNGFile(File file) {
    long size = file.length()
    ExecOperations execOps = project.services.get(ExecOperations)
    execOps.exec {
        executable 'optipng'
        args '-q', '-o7', '-zm1-9', '-strip', 'all', file.absolutePath
    }
    long newSize = file.length()
    if (newSize < size) {
        System.out.format("Reduced File size of %s from %d bytes to %d bytes (reduced by %.2f%%)\n",
                file, size, newSize, ((double) (size - newSize)) / ((double) size) * 100.0)
    }
}

tasks.register('optimizePng') {
    def pngPatterns = ["**/*.png"]
    doLast {
        sourceSets.main.resources.srcDirs.each { dir ->
            fileTree(dir: dir, includes: pngPatterns).each { minimizePNGFile(it) }
        }
    }
}

tasks.register('genIntellijRunsDummy') {}

tasks.register('speedUpPreRun') {
    doLast {
        ["Client", "Server"].each { s ->
            def runConfigFile = file(".idea/runConfigurations/run${s}.xml")
            if (runConfigFile.exists()) {
                ant.replace(file: runConfigFile, token: "prepareRun${s}", value: "prepareRuns")
                def content = runConfigFile.text
                if (!content.contains('-Dorg.gradle.logging.level=warn')) {
                    ant.replace(file: runConfigFile,
                            token: '<option name="VM_PARAMETERS" value="',
                            value: '<option name="VM_PARAMETERS" value="-Dorg.gradle.logging.level=warn ')
                }
            }
        }
    }
}

tasks.withType(Task).configureEach {
    if (it.name == "genIntellijRuns") {
        it.finalizedBy speedUpPreRun
        genIntellijRunsDummy.dependsOn it
    } else if (it.name == "runServer") {
        it.standardInput = System.in
    }
}

idea {
    project {
        settings {
            taskTriggers {
                afterSync genIntellijRunsDummy
            }
        }
    }
}

processResources.dependsOn bumpVersion
jar.dependsOn bumpVersion
sourcesJar.dependsOn bumpVersion

jar {
    archiveBaseName.set("MCT-Blast-Plaster-${version_minecraft}")
    archiveClassifier.set('')
}